Changed login picture

--- a/group2-proj/src/dashboard.html
+++ b/group2-proj/src/dashboard.html
@@ -3,7 +3,7 @@
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins">
     
     <style type=text/css>
         html, body{
@@ -23,7 +23,7 @@
             margin:0px;
         }
         div{
-            font-family: "Roboto";
+            font-family: "Poppins";
         }
         .topnav{
             display: flex;
@@ -62,7 +62,7 @@
             padding: 15px 15px;
             text-decoration: none;
             color: white;
-            font-family: "Roboto";
+            font-family: "Poppins";
             font-size: larger;
             margin-bottom:15px;
             margin-left: 10px;
