--- a/group2-proj/src/index.html
+++ b/group2-proj/src/index.html
@@ -3,7 +3,7 @@
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins">
     
     <style type=text/css>
 
@@ -33,7 +33,7 @@
         border-bottom-right-radius: inherit;
        }
        div{
-        font-family: "Roboto";
+        font-family: "Poppins";
         
        }
        .center{
@@ -64,7 +64,7 @@
         width: 80%;
        }
        button{
-        font-family: "Roboto";
+        font-family: "Poppins";
         border-radius: 25px;
         border-style: none;
         font-size: large;
