Changed background color

--- a/group2-proj/src/index.html
+++ b/group2-proj/src/index.html
@@ -17,12 +17,12 @@
             position: relative;
             margin: 0px;
         }
-        .left{
+        /* .left{
             height: 100%; width:60%;
             background-color: white;
             border-top-left-radius: inherit;
             border-bottom-left-radius: inherit;
-        }
+        } */
        .right{
         background-image:linear-gradient(to right,#FFE53B, #FF005B);
         color: white;
