--- a/group2-proj/src/dashboard.html
+++ b/group2-proj/src/dashboard.html
@@ -39,13 +39,6 @@
             background-color: white;
             
         }
-        ul {
-            list-style-type: none;
-            margin: 0;
-            padding: 0;
-            width: 100%;
-            background-color: #FF005B;
-        }
     
     </style>
 
@@ -78,8 +71,7 @@
 
                     </div>
                     <div>
-                        <a href="#">Logout</a>
-                        <p>Welcome User</p>
+                        <p>Welcome User <a href="#">Logout</a></p>
                     </div>
                 </div>
             </div>
